add controller and format pom.xml