@@ -1,6 +1,5 @@
 package com.example.search;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -8,11 +7,10 @@ import java.util.Map;
 import static org.assertj.core.api.Assertions.assertThat;
 import org.json.JSONArray;
 import org.json.JSONObject;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import static org.mockito.Mockito.verify;
@@ -33,16 +31,6 @@ public class SearchControllerTests {
     @InjectMocks
     private SearchController searchController;
 
-    private SearchRecord record;
-
-    @BeforeEach
-    void setUp() {
-        record = new SearchRecord();
-        record.setUsername("TestUser");
-        record.setSearchTerm("TestTerm");
-        record.setResultCount(10);
-    }
-
     @Test
     public void testSearchWithValidInputs() {
         // Mocking RestTemplate response
@@ -53,28 +41,34 @@ public class SearchControllerTests {
         docs.put(new JSONObject().put("title", "Book2"));
         jsonResponse.put("docs", docs);
 
-        when(restTemplate.getForEntity(anyString(), eq(String.class))).thenReturn(ResponseEntity.ok(jsonResponse.toString()));
+        when(restTemplate.getForEntity(anyString(), any(Class.class))).thenReturn(ResponseEntity.ok(jsonResponse.toString()));
 
         // Mocking SearchService response
-        when(searchService.saveSearchRecord(record)).thenReturn(record);
+        SearchRecord record = new SearchRecord();
+        record.setUsername("TestUser");
+        record.setSearchTerm("TestTerm");
+        record.setResultCount(5);
+        when(searchService.saveSearchRecord(any(SearchRecord.class))).thenReturn(record);
 
         // Calling the controller method directly
         ResponseEntity<?> response = searchController.search("TestUser", "TestTerm");
 
-        verify(restTemplate).getForEntity(anyString(), eq(String.class));
-        verify(searchService).saveSearchRecord(record);
+        verify(restTemplate).getForEntity(anyString(), any(Class.class));
+        verify(searchService).saveSearchRecord(any(SearchRecord.class));
 
         assertThat(response.getStatusCodeValue()).isEqualTo(200);
         assertThat(response.getBody()).isInstanceOf(Map.class);
         Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
         assertThat(responseBody.get("resultCount")).isEqualTo(5);
-        assertThat(responseBody.get("titles")).isEqualTo(Arrays.asList("Book1", "Book2"));
+        assertThat(responseBody.get("titles")).isEqualTo(List.of("Book1", "Book2"));
     }
 
     @Test
     public void testSearchWithEmptyInputs() {
+        // Calling the controller method directly with empty inputs
         ResponseEntity<?> response = searchController.search("", "");
 
+        // Verify response status and body
         assertThat(response.getStatusCodeValue()).isEqualTo(400);
         assertThat(response.getBody()).isEqualTo("Please populate both fields");
     }
@@ -82,9 +76,14 @@ public class SearchControllerTests {
     @Test
     public void testListPrevious() {
         // Mocking SearchService response
+        SearchRecord record = new SearchRecord();
+        record.setUsername("TestUser");
+        record.setSearchTerm("TestTerm");
+        record.setResultCount(5);
         List<SearchRecord> records = Collections.singletonList(record);
         when(searchService.getAllSearchRecords()).thenReturn(records);
 
+        // Calling the controller method directly
         ResponseEntity<List<SearchRecord>> response = searchController.listPrevious();
 
         verify(searchService).getAllSearchRecords();
